--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nunjucks-html-loader": "^1.1.0",
     "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
+    "script-loader": "^0.7.2",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.18.2",
     "vinyl-ftp": "^0.6.0",
